# mmoldb

./: .env  .env-prod  .env.example  .gitignore  Cargo.toml  Dockerfile-prod  Rocket.toml  build.rs  diesel.toml  docker-compose-prod.yml  docker-compose.yml  readme.md  rustfmt.toml
.cargo/: config.toml
.devcontainer/: .env  Dockerfile  Dockerfile-prod  devcontainer.json  docker-compose-prod.yml  docker-compose.yml
.devcontainer/pg_conf/: postgresql.conf
contributing/: adding-new-columns-to-an-existing-taxa.md
docker-prod/: .env  Dockerfile  docker-compose.yml
docker-prod/pg_conf/: pg_hba.conf  postgresql.conf
migrations/2025-04-24-053717_create-ingests-table/: down.sql  up.sql
migrations/2025-04-26-183010_create_event_table/: down.sql  up.sql
migrations/2025-06-14-082926_add-guest-user/: down.sql  up.sql
pg_conf/: postgresql.conf
queries/: era.sql  pitch_type_era.sql
src/: data_schema.rs  info_schema.rs  ingest.rs  main.rs  models.rs  parsing_extensions.rs  schema.rs  taxa_schema.rs
src/db/: mod.rs  taxa.rs  taxa_macro.rs  to_db_format.rs  weather.rs
src/ingest/: check_round_trip.rs  chron.rs  http.rs  mod.rs  sim.rs  worker.rs
src/web/: error.rs  mod.rs  pages.rs  utility_contexts.rs
static/: error.css  game.css  index.css  ingest.css  style.css
templates/: error.html.tera  game.html.tera  games.html.tera  games_include.html.tera  index.html.tera  ingest.html.tera  macros.html.tera
